--- a/Flashcards/Base.lproj/Main.storyboard
+++ b/Flashcards/Base.lproj/Main.storyboard
@@ -43,13 +43,31 @@
                                     <outletCollection property="gestureRecognizers" destination="HZ3-2H-QMy" appends="YES" id="cTp-7f-lcz"/>
                                 </connections>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zJ3-kG-trE">
-                                <rect key="frame" x="169" y="648" width="77" height="91"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nG4-ao-pJw">
+                                <rect key="frame" x="0.0" y="670" width="91" height="63"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="87"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Prev"/>
+                                <connections>
+                                    <action selector="didTapOnPrev:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FYm-AP-qpQ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zJ3-kG-trE">
+                                <rect key="frame" x="182" y="654" width="51" height="57"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="61"/>
                                 <state key="normal" title="+"/>
                                 <connections>
                                     <segue destination="fSK-gz-8UM" kind="presentation" id="ld9-Dx-kyK"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fYi-MT-bCN">
+                                <rect key="frame" x="323" y="670" width="91" height="63"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Next"/>
+                                <connections>
+                                    <action selector="didTapOnNext:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fRD-gp-9Od"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -59,6 +77,8 @@
                     <connections>
                         <outlet property="backLabel" destination="YfQ-Sm-iNc" id="mbw-BC-NZz"/>
                         <outlet property="frontLabel" destination="P8x-gy-QkS" id="zKF-cc-O7t"/>
+                        <outlet property="nextButton" destination="fYi-MT-bCN" id="AVY-Ef-z93"/>
+                        <outlet property="prevButton" destination="nG4-ao-pJw" id="azx-6R-76M"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
